<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="ip_address">IP Address</string>
    <string name="port_number">Port Number</string>
    <string name="send_request">Send Request</string>
    <string name="port">Port</string>
    <string name="myIP" />
    <string name="invited_you_to_play">invited you to play!</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="rejected_your_invitation">rejected your invitation</string>
    <string name="ok">OK</string>
    <string name="try_again">Try Again</string>
    <string name="sonetext" />
    <string name="scissorstext" />
    <string name="papertext" />
    <string name="todo">TODO</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="dot">.</string>
    <string name="backarrow"><![CDATA[<]]></string>
</resources>
