<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/declineIP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Title" />

    <TextView
        android:id="@+id/declinetext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rejected_your_invitation"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/declineButtonOK"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/declinetext"
        android:layout_toEndOf="@id/declineButtonTryAgain"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/declineButtonTryAgain"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/declinetext"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/try_again" />

</RelativeLayout>
