<?xml version="1.0" encoding="utf-8"?>
<!--Adapted from: https://www.mkyong.com/android/android-custom-dialog-example/-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/acceptIP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Title" />

    <TextView
        android:id="@+id/accepttext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/invited_you_to_play"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/acceptButtonYes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accepttext"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/accept" />

    <Button
        android:id="@+id/acceptButtonNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accepttext"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@id/acceptButtonYes"
        android:text="@string/decline" />

</RelativeLayout>
