<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/IP_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="241dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ip_address"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/IP_textbox"
        app:layout_constraintEnd_toStartOf="@+id/Port_label"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IP_device" />

    <TextView
        android:id="@+id/Port_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="241dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/port"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/Port_textbox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IP_label"
        app:layout_constraintTop_toBottomOf="@+id/IP_device" />

    <EditText
        android:id="@+id/IP_textbox"
        android:layout_width="407dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"
        android:background="@android:color/white"
        android:ems="10"
        android:importantForAutofill="no"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/request_button"
        app:layout_constraintEnd_toStartOf="@+id/Port_textbox"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IP_label" />

    <EditText
        android:id="@+id/Port_textbox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="70dp"
        android:background="@android:color/white"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/request_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IP_textbox"
        app:layout_constraintTop_toBottomOf="@+id/Port_label" />

    <Button
        android:id="@+id/request_button"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="300dp"
        android:text="@string/send_request"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/incoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IP_textbox" />

    <TextView
        android:id="@+id/IP_device"
        android:layout_width="596dp"
        android:layout_height="307dp"
        android:text="@string/myIP"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/incoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="417dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="598dp" />

</android.support.constraint.ConstraintLayout>